--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ h2 {
     font-size: 2em;
     margin-top: 50px;
     text-align: center;
+    text-transform: capitalize;
 }
 
 h3 {
@@ -54,12 +55,12 @@ img {
 
 nav {
     text-align: center;
+    margin-top: 25px;
 }
 
 button {
     background-color: #eee;
     font-size: 1.1em;
-    margin-top: 25px;
     border: none;
     border-bottom: 2px solid #eee;
 }
@@ -89,14 +90,26 @@ article:hover {
     top: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.8);
     text-align: center;
     position: fixed;
     overflow: hidden;
     visibility: hidden;
 }
 
+#popup-overlay {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.80);
+}
+
+#popup-overlay:hover {
+    cursor: pointer;
+}
+
 #popupindhold {
+    z-index: 5;
     width: 80vw;
     height: 50vh;
     background: #fff;
