--- a/css/style.css
+++ b/css/style.css
@@ -1,173 +1,84 @@
 body {
-    font-family: 'Arial';
     margin: 0;
-    padding: 0;
 }
 
-header {
-    background-color: #eee;
-    padding: 25px;
-}
+/**** Wrapper - overordnet ****/
 
-footer {
-    background-color: #eee;
-    padding: 25px;
-}
-
-footer section {
+.wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-/** OVERSKRIFTER **/
-
-h1 {
-    padding: 0;
-    margin: 0;
-    font-size: 2em;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-
-h2 {
-    padding: 0;
-    margin: 0;
-    font-size: 2em;
-    margin-top: 50px;
-    text-align: center;
-    text-transform: capitalize;
-}
-
-h3 {
-    font-size: 1.1em;
-}
-
-img {
-    object-fit: cover;
-    width: 100%;
-}
-
-nav {
-    text-align: center;
-    margin-top: 25px;
-}
-
-button {
-    background-color: #eee;
-    font-size: 1.1em;
-    border: none;
-    border-bottom: 2px solid #eee;
-}
-
-button:hover {
-    cursor: pointer;
-    border-bottom: 2px solid #c3c3c3;
-}
-
-button:focus {
-    outline: 0;
-    border-bottom: 2px solid #c3c3c3;
-}
-
-/** RET **/
-
-#menu-container {
-    display: grid;
-    margin: 0 auto;
-    max-width: 1280px;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 5px;
-    padding: 20px 50px 50px 50px;
-}
-
-article {
+    grid-gap: 10px;
     background-color: green;
 }
 
-.ret img {
-    height: 100%;
+/**** Header - header med nav, menu buttons og logo ****/
+
+header {
+    background-color: red;
+    grid-column: 1/3;
 }
 
-article:hover {
-    cursor: pointer;
+/**** Main section - Container for menu, med retter ****/
+
+main {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90vw;
+    grid-column: 1/3;
+    background-color: blue;
 }
 
-
-/** POPUP **/
-
-/** POPUP **/
-
-/** POPUP **/
-
-#popup {
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    text-align: center;
-    position: fixed;
-    overflow: hidden;
-    visibility: hidden;
-}
-
-#popup-overlay {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.80);
-}
-
-#popup-overlay:hover {
-    cursor: pointer;
-}
-
-#popupindhold {
-    z-index: 5;
-    width: 80vw;
-    height: 50vh;
-    background: #fff;
-    position: absolute;
-    left: 10vw;
-    top: 25vh;
+#menu-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    grid-gap: 3px;
 }
 
-#popup img {
+article.ret {
+    position: relative;
+    background-color: yellow;
+    height: 300px;
+}
+
+.ret-overlay {
+    position: absolute;
+    z-index: 10;
+    background-color: rgba(255, 255, 255, 0.25);
+    height: 100%;
+    width: 100%;
+}
+
+article.ret img {
     object-fit: cover;
-
+    width: 100%;
+    height: 100%;
 }
 
+/**** Footer, adresse og åbningstider ****/
 
-/*** SORTERING ***/
-
-.markeret {
+footer {
     background-color: red;
-    color: white;
+    grid-column: 1/3;
 }
 
 
+/**** Popup boks,  med layout for de enkelte retter ****/
 
-/** MEDIA QUERYES **/
+
+#popup {
+    display: none;
+}
+
+/**** Media querys - forskellige skærmstørrelser ****/
 
 @media screen and (min-width: 500px) {
     #menu-container {
         grid-template-columns: repeat(2, 1fr);
     }
+}
 
-    @media screen and (min-width: 800px) {
-        #menu-container {
-            grid-template-columns: repeat(3, 1fr);
-        }
-
-        #popupindhold {
-            grid-template-columns: repeat(2, 1fr);
-        }
-
-        #popup img {
-            height: 100%;
-        }
+@media screen and (min-width: 900px) {
+    #menu-container {
+        grid-template-columns: repeat(3, 1fr);
     }
+}
