--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,286 @@
 body {
     margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: white;
+}
+
+* {
+/*    transition: .2s all ease;*/
+    margin: 0;
+    padding: 0;
+    outline: none;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 /**** Wrapper - overordnet ****/
 
 .wrapper {
+    background-color: white;
+    margin-bottom: 400px;
+    z-index: 2;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-    background-color: green;
 }
 
 /**** Header - header med nav, menu buttons og logo ****/
 
 header {
-    background-color: red;
     grid-column: 1/3;
+/*    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.01);*/
 }
+
+header h1 {
+    text-align: center;
+    text-transform: lowercase;
+    font-size: 10vw;
+    color: rgba(242, 0, 0, 0.79);
+    font-weight: 900;
+    margin: 50px;
+}
+
+header nav {
+    width: 90vw;
+    height: 50px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 2px;
+}
+
+header nav button {
+    padding: 10px;
+    font-size: 1em;
+    border: 0;
+    background-color: white;
+}
+
+header nav button:focus {
+    outline: 0;
+    background-color: #ccc;
+}
+
+header nav button:hover {
+    outline: 0;
+    background-color: #ccc;
+}
+
 
 /**** Main section - Container for menu, med retter ****/
 
 main {
-    margin: 0 auto;
-    max-width: 1280px;
+    margin: 50px auto 100px auto;
+    max-width: 1000px;
     width: 90vw;
     grid-column: 1/3;
-    background-color: blue;
+}
+
+h2#overskrift {
+    display: none;
+}
+
+select {
+    display: none;
 }
 
 #menu-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 3px;
+    grid-gap: 5px;
 }
 
 article.ret {
     position: relative;
-    background-color: yellow;
     height: 300px;
+    overflow: hidden;
 }
 
-.ret-overlay {
+article.ret:hover {
+    cursor: pointer;
+
+}
+
+article.ret:hover > .ret-white {
+    top: 150px;
+}
+
+article.ret:hover > .ret-overlay {
+    background-color: rgba(0, 21, 183, 0.57);
+}
+
+article.ret:hover > .billede {
+    width: 105%;
+    height: 105%;
+}
+
+article.ret .ret-overlay {
     position: absolute;
     z-index: 10;
-    background-color: rgba(255, 255, 255, 0.25);
+
+    background-color: rgba(0, 21, 183, 0.1);
     height: 100%;
     width: 100%;
+    transition: 0.5s all ease;
 }
 
-article.ret img {
+article.ret .ret-white {
+    position: absolute;
+    z-index: 10;
+    left: 4%;
+    top: 250px;
+    width: 92%;
+    color: white;
+    transition: 0.7s all ease;
+}
+
+article.ret .ret-titel {
+    padding: 10px;
+    font-size: 1.2em;
+}
+
+article.ret .kort_beskrivelse {
+    padding: 10px;
+    font-size: 1em;
+}
+
+article.ret .priss {
+    padding: 10px;
+    font-size: 1em;
+}
+
+article.ret .billede {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    transition: 0.5s all ease;
 }
 
 /**** Footer, adresse og åbningstider ****/
 
 footer {
-    background-color: red;
+    position: fixed;
+    z-index: -1;
+    bottom: 0;
+    background-color: #262626;
+    height: 400px;
+    width: 100vw;
+    color: #eee;
     grid-column: 1/3;
 }
 
 
 /**** Popup boks,  med layout for de enkelte retter ****/
 
-
 #popup {
-    display: none;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 20;
+    overflow: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.5s all ease;
+}
+
+#popup-overlay {
+    position: absolute;
+    z-index: 21;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
+#popup-overlay:hover {
+    cursor: pointer;
+}
+
+#popup-content {
+    position: absolute;
+    z-index: 22;
+    width: 100vw;
+    height: 100vh;
+    background: #fff;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.left {
+    grid-column: 1/3;
+}
+
+#popup img {
+    position: relative;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.closeModal {
+    font-size: 4em;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0;
 }
 
 /**** Media querys - forskellige skærmstørrelser ****/
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 600px) {
     #menu-container {
         grid-template-columns: repeat(2, 1fr);
     }
+
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1000px) {
     #menu-container {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
+
+/**** Burger menu ****/
+
+/* .burger {
+    cursor: pointer;
+    background: #eee;
+    border: none;
+    justify-self: end;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: .4s;
+}
+
+nav {
+    max-height: 0px;
+    overflow: hidden;
+    transition: 0.6s;
+}
+
+nav.show {
+    min-height: 500px;
+}
+
+.change .bar1 {
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {
+    opacity: 0;
+}
+
+.change .bar3 {
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+*/
