--- a/css/style.css
+++ b/css/style.css
@@ -1,189 +1,90 @@
+/**** Body og fjernelse af margin ****/
+/*************************************/
+
 body {
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    padding: 0;
     background-color: white;
 }
 
 * {
-/*    transition: .2s all ease;*/
-    margin: 0;
     padding: 0;
+    margin: 0;
     outline: none;
 }
 
-button:hover {
-    cursor: pointer;
-}
-
-.stop-scrolling {
-  height: 100%;
-  overflow: hidden;
-}
-
-/**** Wrapper - overordnet ****/
+/**** Wrapper, header og main ****/
+/*********************************/
 
 .wrapper {
-    background-color: white;
-    margin-bottom: 400px;
-    z-index: 2;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    background-color: white;
 }
 
-/**** Header - header med nav, menu buttons og logo ****/
-
 header {
-    grid-column: 1/3;
-/*    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.01);*/
+    position: fixed;
+    width: 20vw;
+    height: 100vh;
+    grid-column: 1/2;
+    background-color: white;
+}
+
+main {
+    grid-column: 2/6;
+}
+
+/**** Indhold for header ****/
+/****************************/
+
+header img {
+    width: 40%;
+    margin-left: 30%;
+    margin-top: 50px;
+    transition: 0.2s all ease;
+}
+
+header img:hover {
+    transform: scale(2);
 }
 
 header h1 {
-    text-align: center;
-    text-transform: lowercase;
-    font-size: 10vw;
-    color: rgba(242, 0, 0, 0.79);
-    font-weight: 900;
-    margin: 50px;
-}
-
-header nav {
-    width: 90vw;
-    height: 50px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 2px;
-}
-
-header nav button {
-    padding: 10px;
-    font-size: 1em;
-    border: 0;
-    background-color: white;
-}
-
-header nav button:focus {
-    outline: 0;
-    background-color: #ccc;
-}
-
-header nav button:hover {
-    outline: 0;
-    background-color: #ccc;
+    color: transparent;
 }
 
 
-/**** Main section - Container for menu, med retter ****/
-
-main {
-    margin: 50px auto 100px auto;
-    max-width: 1400px;
-    width: 90vw;
-    grid-column: 1/3;
-}
-
-h2#overskrift {
-    display: none;
-}
-
-select {
-    display: none;
-}
+/**** Menu-container og definering af retter ****/
+/************************************************/
 
 #menu-container {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 5px;
+    grid-template-columns: repeat(4, 1fr);
 }
 
-article.ret {
-    position: relative;
-    height: 300px;
-    overflow: hidden;
+article {
+    transition: 0.2s all ease;
 }
 
-article.ret:hover {
+article:hover {
     cursor: pointer;
-
+    transform: scale(1.2);
 }
 
-article.ret:hover > .ret-white {
-    top: 150px;
-}
-
-article.ret:hover > .ret-overlay {
-    background-color: rgba(0, 21, 183, 0.57);
-}
-
-article.ret:hover > .billede {
-    width: 105%;
-    height: 105%;
-}
-
-article.ret .ret-overlay {
-    position: absolute;
-    z-index: 10;
-
-    background-color: rgba(0, 21, 183, 0.1);
-    height: 100%;
+img {
     width: 100%;
-    transition: 0.5s all ease;
-}
-
-article.ret .ret-white {
-    position: absolute;
-    z-index: 10;
-    left: 4%;
-    top: 250px;
-    width: 92%;
-    color: white;
-    transition: 0.7s all ease;
-}
-
-article.ret .ret-titel {
-    padding: 10px;
-    font-size: 1.2em;
-}
-
-article.ret .kort_beskrivelse {
-    padding: 10px;
-    font-size: 1em;
-}
-
-article.ret .priss {
-    padding: 10px;
-    font-size: 1em;
-}
-
-article.ret .billede {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    transition: 0.5s all ease;
-}
-
-/**** Footer, adresse og åbningstider ****/
-
-footer {
-    position: fixed;
-    z-index: -1;
-    bottom: 0;
-    background-color: #262626;
-    height: 400px;
-    width: 100vw;
-    color: #eee;
-    grid-column: 1/3;
 }
 
 
-/**** Popup boks,  med layout for de enkelte retter ****/
+
+/**** Modalvindue og indhold ****/
+/********************************/
 
 .titel2 {
     position: absolute;
     top: 10%;
     z-index: 21;
     color: transparent;
-    -webkit-text-stroke: 2px white;
+    -webkit-text-stroke: 2px #1a47a8;
     font-size: 8em;
     text-transform: uppercase;
     right: -20%;
@@ -209,7 +110,7 @@ footer {
     z-index: 21;
     width: 100%;
     height: 100%;
-    background-color: rgba(26, 71, 168, 0.89);
+    background-color: rgba(255, 255, 255, 0.97);
 }
 
 #popup-overlay:hover {
@@ -233,11 +134,11 @@ footer {
 }
 
 .right {
-    margin-top: 50%;
-    margin-left: -20px;
+    margin-top: 90%;
+    margin-left: -15px;
     z-index: 2;
     height: 50%;
-    background-color: white;
+    color: #2552b2;
     padding: 10px;
 }
 
@@ -252,68 +153,65 @@ footer {
     font-size: 4em;
     position: absolute;
     background-color: transparent;
-    color: white;
+    color: #1a47a8;
+    text-transform: lowercase;
     top: -40%;
     right: 0;
     border: 0;
 }
 
-/**** Media querys - forskellige skærmstørrelser ****/
 
-@media screen and (min-width: 600px) {
-    #menu-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
 
+
+
+
+
+
+
+
+
+
+
+/**** Fordeling af retter ****/
+article:nth-child(8n+1) {
+    grid-column: 1/5;
 }
 
-@media screen and (min-width: 1000px) {
-    #menu-container {
-        grid-template-columns: repeat(3, 1fr);
-    }
+article:nth-child(8n+2) {
+    grid-column: 3/4;
+}
+
+article:nth-child(8n+3) {
+    grid-column: 1/3;
+}
+
+article:nth-child(8n+4) {
+    grid-column: 4/5;
+}
+
+article:nth-child(8n+5) {
+    grid-column: 3/5;
+}
+
+article:nth-child(8n+6) {
+    grid-column: 1/3;
+}
+
+article:nth-child(8n+7) {
+    grid-column: 2/5;
+}
+
+article:nth-child(8n+8) {
+    grid-column: 1/3;
 }
 
 
 
+/**** Display none ****/
 
-/**** Burger menu ****/
-
-/* .burger {
-    cursor: pointer;
-    background: #eee;
-    border: none;
-    justify-self: end;
+#popup {
 }
 
-.bar1,
-.bar2,
-.bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: .4s;
+select {
+    display: none;
 }
-
-nav {
-    max-height: 0px;
-    overflow: hidden;
-    transition: 0.6s;
-}
-
-nav.show {
-    min-height: 500px;
-}
-
-.change .bar1 {
-    transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-.change .bar2 {
-    opacity: 0;
-}
-
-.change .bar3 {
-    transform: rotate(45deg) translate(-8px, -8px);
-}
-*/
